# qgis-oacs-plugin

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
docs/: development.md  index.md  known-servers.md  third-party.md  user-guide.md
qt-resources/: resources.qrc
src/qgis_oacs/: client.py  constants.py  main.py  models.py  registry.py  utils.py
src/qgis_oacs/gui/: data_source_connection_dialog.py  data_source_select_provider.py  data_source_widget.py  detail_panel.py  map_layer_config_widget.py  oacs_panel.py  observations_panel.py  resource_tree_widgets.py
src/qgis_oacs/gui/search_widgets/: base.py  resource_tree_widgets.py  system_items_widget.py  system_tree_widget.py
src/qgis_oacs/ui/: map_layer_config_widget.ui  search_system_items_widget.ui
